started using regex for urls to reduce size of routes file - council tax

--- a/app/views/lis/5/live/council-tax.html
+++ b/app/views/lis/5/live/council-tax.html
@@ -17,7 +17,7 @@
   <h1 class="heading-large">
     Do you pay council tax?
   </h1>
-  <form action="council-tax-handler" method="get" class="form">
+  <form action="ctax-handler" method="get" class="form">
 
     <div class="form-item-wrapper">
       <fieldset>
