--- a/app/views/lis/7/you/about-you-summary.html
+++ b/app/views/lis/7/you/about-you-summary.html
@@ -72,13 +72,13 @@
       <p><strong>Pensions</strong></p>
       <table class="data-table you-summary">   
         <tr>
-        <td>Which type(s) of pension do you receive?</td>
+        <td>Which pension(s) do you receive?</td>
         <td>State,<br>Private</td>
         <td><a href="pension/private-pension-amount">Change this</a></td>
       </tr>
         <tr>
         <td>About your state pension</td>
-        <td>£141 per week</td>
+        <td>£{{statepensionamount}} {{statepensionfrequency}}</td>
         <td><a href="pension/private-pension-amount">Change this</a></td>
       </tr>
          <tr>
