--- a/app/views/lis/6/savings.html
+++ b/app/views/lis/6/savings.html
@@ -17,7 +17,7 @@
     <span class="form-hint">Include investments and properties but not place where you live</span>
   </h1>
 
-  <form action="savings-kickout-handler" method="get" class="form">
+  <form action="savings-ko-handler" method="get" class="form">
       <div class="form-item-wrapper">
         <fieldset>
           <div class="inline-form-groups">
