--- a/app/views/lis/5/savings.html
+++ b/app/views/lis/5/savings.html
@@ -17,7 +17,7 @@
   </h1>
   <p>Include savings, investments &amp; properties (but not place where you live)</p>  
 
-  <form action="savings-kickout-handler" method="get" class="form">
+  <form action="savings-ko-handler" method="get" class="form">
       <div class="form-item-wrapper">
         <fieldset>
           <div class="inline-form-groups">
