--- a/app/views/lis/7/live/mortgaged/mortgage.html
+++ b/app/views/lis/7/live/mortgaged/mortgage.html
@@ -17,7 +17,7 @@
   <h1 class="heading-large">
     Do you have a mortgage or loan secured on your home?
   </h1>
-  <form action="mortgage-handler" method="get" class="form">
+  <form action="mortgaged-handler" method="get" class="form">
 
     <div class="form-item-wrapper">
       <fieldset>
