--- a/app/views/lis/7/live/others/hours.html
+++ b/app/views/lis/7/live/others/hours.html
@@ -16,7 +16,7 @@
         On average do they work for 16 hours or more per week?
       </h1>
   
-      <form action="hours-handler" method="get" class="form">
+      <form action="work-hours-handler" method="get" class="form">
           <div class="form-item-wrapper">
             <fieldset>
               <div class="inline-form-groups">
