refactored routs -291 lines of code and counting

--- a/app/views/lis/2/live/living-summary.html
+++ b/app/views/lis/2/live/living-summary.html
@@ -138,7 +138,7 @@
     </table>
     
     <p>
-      <a class="button" href="../lis-home-updated" id="next">Save and continue</a>
+      <a class="button" href="../home-updated" id="next">Save and continue</a>
     </p>
 
   </div>
