--- a/app/views/sprint0.html
+++ b/app/views/sprint0.html
@@ -39,7 +39,7 @@
       <ul>
         <li><a href="/lis/2/index">Start page</a></li>
         <li><a href="/lis/2/lis-home">My lis home page</a></li>
-        <li><a href="/lis/2/lis-home-updated">My lis home page updated</a></li>
+        <li><a href="/lis/2/home-updated">My lis home page updated</a></li>
         <li><a href="/lis/2/part-help">Part help outcome</a></li>
       </ul>
       <ul>
@@ -72,7 +72,7 @@
       <ul>
         <li><a href="/lis/1/index">Start page</a></li>
         <li><a href="/lis/1/lis-home">My lis home page</a></li>
-        <li><a href="/lis/1/lis-home-updated">My lis home page updated</a></li>
+        <li><a href="/lis/1/home-updated">My lis home page updated</a></li>
         <li><a href="/lis/1/full-help">Full help outcome</a></li>
       </ul>
       <ul>
