--- a/app/views/sprint2.html
+++ b/app/views/sprint2.html
@@ -19,7 +19,7 @@
       <ul>
         <li><a href="/lis/2/index">Start page</a></li>
         <li><a href="/lis/2/lis-home">My lis home page</a></li>
-        <li><a href="/lis/2/lis-home-updated">My lis home page updated</a></li>
+        <li><a href="/lis/2/home-updated">My lis home page updated</a></li>
         <li><a href="/lis/2/part-help">Part help outcome</a></li>
       </ul>
 
