--- a/app/views/sprint1.html
+++ b/app/views/sprint1.html
@@ -18,7 +18,7 @@
       <ul>
         <li><a href="/lis/1/index">Start page</a></li>
         <li><a href="/lis/1/lis-home">My lis home page</a></li>
-        <li><a href="/lis/1/lis-home-updated">My lis home page updated</a></li>
+        <li><a href="/lis/1/home-updated">My lis home page updated</a></li>
         <li><a href="/lis/1/full-help">Full help outcome</a></li>
       </ul>
   
