removed duplicate pencred handlers from routes 457 lines total removed

--- a/app/views/lis/2/you/pension/pension-credit.html
+++ b/app/views/lis/2/you/pension/pension-credit.html
@@ -16,11 +16,11 @@
       Do you receive pension credit?
   </h1>
 
-  <form action="pencred-handler" method="get" class="form">
+  <form action="pencred-handler3" method="get" class="form">
     <div class="form-item-wrapper">
       <div class="form-group">
-        <input type="radio" id="ib" name="prencred" value="ib">
-        <label class="form-control-radio" for="ib">
+        <input type="radio" id="gc" name="prencred" value="gc">
+        <label class="form-control-radio" for="gc">
           Yes, guarantee credit
         </label>
       </div>
