--- a/app/views/lis/4/partner/pension/pension-credit.html
+++ b/app/views/lis/4/partner/pension/pension-credit.html
@@ -16,17 +16,17 @@
       Does your partner receive pension credit?
   </h1>
 
-  <form action="pencred-handler" method="get" class="form">
+  <form action="pencred-handler3" method="get" class="form">
     <div class="form-item-wrapper">
       <div class="form-group">
-        <input type="radio" id="ib" name="prencred" value="ib">
-        <label class="form-control-radio" for="ib">
+        <input type="radio" id="gc" name="prencred" value="gc">
+        <label class="form-control-radio" for="gc">
           Yes, guarantee credit
         </label>
       </div>
       <div class="form-group">
-        <input type="radio" id="ssp" name="prencred">
-        <label class="form-control-radio" for="ssp">
+        <input type="radio" id="sc" name="prencred">
+        <label class="form-control-radio" for="sc">
           Yes, savings credit
         </label>
       </div>
