--- a/app/views/lis/4/you/pension/pension-credit.html
+++ b/app/views/lis/4/you/pension/pension-credit.html
@@ -16,10 +16,10 @@
       Do you receive pension credit?
   </h1>
 
-  <form action="pencred-handler" method="get" class="form">
+  <form action="pencred-handler3" method="get" class="form">
     <div class="form-item-wrapper">
       <div class="form-group">
-        <input type="radio" id="ib" name="prencred" value="ib">
+        <input type="radio" id="ib" name="prencred" value="gc">
         <label class="form-control-radio" for="ib">
           Yes, guarantee credit
         </label>
