--- a/app/views/lis/7/you/pension/pension-credit.html
+++ b/app/views/lis/7/you/pension/pension-credit.html
@@ -17,7 +17,7 @@
     <span class="form-hint">This is a pension top up of up to £13.07 per week (for single people) or up to £14.75 (for couples).</span>
   </h1>
 
-  <form action="pencred-handler" method="get" class="form">
+  <form action="pencred-handler6" method="get" class="form">
     <div class="form-item-wrapper">     
       <div class="inline-form-groups">
         <div class="form-group">
