--- a/app/views/lis/5/partner/pension/pension-credit.html
+++ b/app/views/lis/5/partner/pension/pension-credit.html
@@ -16,19 +16,19 @@
       Does your partner receive Pension Credit Savings Credit?
   </h1>
 
-  <form action="pencred-handler" method="get" class="form">
+  <form action="pencred-handler5" method="get" class="form">
     <div class="form-item-wrapper">
       <fieldset>
       <div class="inline-form-groups">
         <div class="form-group">
-        <input type="radio" id="ssp" name="prencred" value="ssp">
-        <label class="form-control-radio" for="ssp">
+        <input type="radio" id="yes" name="savingscredit" value="yes">
+        <label class="form-control-radio" for="yes">
           Yes
         </label>
       </div>
       <div class="form-group">
-        <input type="radio" id="none" name="prencred" value="none">
-        <label class="form-control-radio" for="none">
+        <input type="radio" id="no" name="savingscredit" value="no">
+        <label class="form-control-radio" for="no">
           No
         </label>
       </div>
