--- a/app/views/lis/6/you/pension/pension-credit.html
+++ b/app/views/lis/6/you/pension/pension-credit.html
@@ -17,18 +17,18 @@
     <span class="form-hint">This is a pension top up of up to £13.07 per week (for single people) or up to £14.75 (for couples).</span>
   </h1>
 
-  <form action="pencred-handler" method="get" class="form">
+  <form action="pencred-handler6" method="get" class="form">
     <div class="form-item-wrapper">     
       <div class="inline-form-groups">
         <div class="form-group">
-        <input type="radio" id="ssp" name="prencred" value="ssp">
-        <label class="form-control-radio" for="ssp">
+        <input type="radio" id="yes" name="savingscredit" value="yes">
+        <label class="form-control-radio" for="yes">
           Yes
         </label>
       </div>
       <div class="form-group">
-        <input type="radio" id="none" name="prencred" value="none">
-        <label class="form-control-radio" for="none">
+        <input type="radio" id="no" name="savingscredit" value="no">
+        <label class="form-control-radio" for="no">
           No
         </label>
       </div>
