--- a/app/views/lis/7/wizard/date-of-birth.html
+++ b/app/views/lis/7/wizard/date-of-birth.html
@@ -56,12 +56,57 @@
 
   </form>
       </div>
-        </div>
+
+
+<!-- help received-->
+        <div class="column-third">
+         <div class="right-col-details">
+
+         <div>
+          <h3 class="heading-medium" style="margin-bottom:0em">You get free:</h3>
+         </div>
+
+          <div class="info-panel prescription" id="prescription" style="margin-top:1em">
+             <p class="lede" style="font-weight:bold; margin:0 0 0 0; padding-left:1.2em;">Prescriptions</p>
+          </div>
+
+          <div class="info-panel dental-exam" id="dental-exam">
+             <p class="lede" style="font-weight:bold; margin:0 0 0 0; padding-left:1.2em;">NHS dental exam</p>
+          </div>
+
+        <div>
+          <h3 class="heading-medium" style="margin-bottom:0em; border-bottom: 7px solid #0072C6;">You do not get free:</h3>
+         </div>
+
+           <div class="info-panel-negative dental" id="dental-treatment" style="margin-top:1em">
+             <p class="lede" style="font-weight:bold; margin:0 0 0 0; padding-left:1.2em;">NHS dental treatment</p>
+          </div>
+
+           <div class="info-panel-negative sight-test" id="sight-test">
+             <p class="lede" style="font-weight:bold; margin:0 0 0 0; padding-left:1.2em;">Sight tests</p>
+          </div>
+
+           <div class="info-panel-negative glasses" id="glasses">
+             <p class="lede" style="font-weight:bold; margin:0 0 0 0;padding-left:1.2em;">Glasses or contact lenses</p>
+          </div>
+
+           <div class="info-panel-negative wigs" id="wigs">
+             <p class="lede" style="font-weight:bold; margin:0 0 0 0; padding-left:1.2em;">NHS wigs</p>
+          </div>
+
+
+           <div class="info-panel-negative travel" id="travel">
+             <p class="lede" style="font-weight:bold; margin:0 0 0 0; padding-left:1.2em;">Travel costs</p>
+          </div>
+
+    </div>
+    </div>
+    </div>
+
 </main>
 
 
 {% endblock %}
-
 
 
 
