--- a/public/stylesheets/nhs_application.css
+++ b/public/stylesheets/nhs_application.css
@@ -2254,9 +2254,7 @@ tr.clickable-row {
   padding: 0; }
 
 .right-col-details {
-  width: 95%;
-  float: right;
-  margin-top: 139px; }
+  margin-top: 1em; }
   .right-col-details:after {
     content: "";
     display: table;
@@ -2417,6 +2415,58 @@ tr.clickable-row {
   color: white;
   margin-bottom: 5px; }
 
+.info-panel-negative {
+  padding: 20px 20px 20px 60px;
+  font-weight: bold;
+  background: #eff3f5;
+  text-align: left;
+  color: gray;
+  margin-bottom: 5px; }
+
+/*icons for types of care*/
+.prescription {
+  background-image: url(/public/images/prescription.svg);
+  background-repeat: no-repeat;
+  background-position: 1em;
+  background-size: 3.4em; }
+
+.sight-test {
+  background-image: url(/public/images/sight-test-neg.svg);
+  background-repeat: no-repeat;
+  background-position: 1em;
+  background-size: 3.4em; }
+
+.glasses {
+  background-image: url(/public/images/glasses-neg.svg);
+  background-repeat: no-repeat;
+  background-position: 1em;
+  background-size: 3.4em; }
+
+.dental {
+  background-image: url(/public/images/dental-neg.svg);
+  background-repeat: no-repeat;
+  background-position: 1em;
+  background-size: 3.4em; }
+
+.dental-exam {
+  background-image: url(/public/images/dental.svg);
+  background-repeat: no-repeat;
+  background-position: 1em;
+  background-size: 3.4em; }
+
+.wigs {
+  background-image: url(/public/images/wigs-neg.svg);
+  background-repeat: no-repeat;
+  background-position: 1em;
+  background-size: 3.4em; }
+
+.travel {
+  background-image: url(/public/images/travel-neg.svg);
+  background-repeat: no-repeat;
+  background-position: 0.5em;
+  background-size: 4.1em; }
+
+/*end*/
 .email-text {
   padding-left: 2em;
   background-image: url(/public/images/icon_email.png);
