--- a/app/views/lis/7/wizard/passported-benefits.html
+++ b/app/views/lis/7/wizard/passported-benefits.html
@@ -30,7 +30,7 @@
 
 </details>
   <br>
-  <form action="eligibility-handler" method="get" class="form">
+  <form action="benefitsv2-handler" method="get" class="form">
     <div class="form-item-wrapper">
       <div class="form-group">
         <input type="radio" id="cbsa" name="kickout">
