--- a/app/views/lis/7/wizard/pregnancy.html
+++ b/app/views/lis/7/wizard/pregnancy.html
@@ -14,8 +14,8 @@
 
 
        <!--3- Are you named on a Tax Credits Exemption certificate-->
-    <h2 class="heading-medium">Are you pregnant, or had a baby in the last 12 months?</h2>
-         <form action="eligibility-handler" method="get" class="form">
+    <h1 class="heading-large">Are you pregnant, or had a baby in the last 12 months?</h1>
+         <form action="lis-handler" method="get" class="form">
 <!--         <p class="form-hint">This also includes if you have had a miscarriage or stillborn birth.</p>-->
 
 
