--- a/app/views/lis/7/wizard/long-term-medical-condition.html
+++ b/app/views/lis/7/wizard/long-term-medical-condition.html
@@ -10,14 +10,13 @@
     <div class="column-two-thirds">
 
   <h1 class="heading-large">
-    What help can I get with health care costs?
+Do you have a long-term medical condition?
         </h1>
   <br>
 
        <!--3- Are you named on a Medical Exemption certificate-->
-    <h2 class="heading-medium">Do you have a long-term mediacl condition?</h2>
 
-      <form action="eligibility-handler" method="get" class="form">
+      <form action="pregnancy-handler" method="get" class="form">
 
           <div class="form-item-wrapper">
       <div class="form-group">
@@ -79,6 +78,13 @@
         <input type="radio" id="myxoedema" name="eligibility-medex">
         <label class="form-control-radio" for="myxoedema">
         Myxoedema <br><span class="text-small">For example hypothyroidism which needs thyroid hormone replacement</span>
+        </label>
+      </div>
+      <p class="form-block">or</p>
+      <div class="form-group">
+        <input type="radio" id="continue" name="kickout" value="continue">
+        <label class="form-control-radio" for="continue">
+          I don't have any of these conditions
         </label>
       </div>
       </div>
