--- a/public/stylesheets/nhs_application.css
+++ b/public/stylesheets/nhs_application.css
@@ -2262,8 +2262,7 @@ tr.clickable-row {
   .right-col-details div {
     margin-bottom: 15px; }
     .right-col-details div:first-child {
-      border-bottom: 7px solid #0072C6;
-      padding-bottom: 15px; }
+      border-bottom: 7px solid #0072C6; }
 
 .breakdown {
   font-size: 1.5rem; }
