--- a/app/views/lis/6/you/email.html
+++ b/app/views/lis/6/you/email.html
@@ -17,7 +17,7 @@
 
   <!-- <p class="navigation"><a class="back-to-previous">Back</a></p> -->
       
-  <form action="email-handler" method="get" class="form">
+  <form action="mail-handler" method="get" class="form">
     
     <div class="form-item-wrapper">
           <fieldset>
