--- a/app/views/lis/7/you/email.html
+++ b/app/views/lis/7/you/email.html
@@ -17,7 +17,7 @@
 
   <!-- <p class="navigation"><a class="back-to-previous">Back</a></p> -->
       
-  <form action="email-handler" method="get" class="form">
+  <form action="mail-handler" method="get" class="form">
     
     <div class="form-item-wrapper">
           <fieldset>
@@ -39,7 +39,7 @@
             <div class="js-hidden panel-indent" id="contact-email-address">
             {{
               form_macros.text_field({
-                id: 'firstname',
+                id: 'email',
                 label: 'Email address'
               })
             }}
@@ -53,9 +53,10 @@
           })
         }}
     
-    <p class="navigation"><a class="cancel" href="../lis-home">Save and come back later</a></p>
-
   </form>
+  
+  <p class="navigation"><a class="cancel" href="../lis-home">Save and come back later</a></p>
+
     </div>
     </div>
 </main>
