--- a/app/views/lis/7/wizard/country_v2.html
+++ b/app/views/lis/7/wizard/country_v2.html
@@ -10,20 +10,53 @@
 <style>
 
     .right-col-details{
-        width: 95%;
-        float: right;
-        margin-top: 80px}
+        }
 
     .right-col-details div:first-child {
     border-bottom: 7px solid #0072C6;
         padding-bottom: 0px;}
+    .success {
+  background-image: url("/public/images/tick-green.svg");
+  background-repeat: no-repeat;
+  background-position: 95% 55%; }
+
+.form-hint-list-item {
+	margin:0 0 0.6em 0;
+	display:table
+}
+.form-hint-list-item__indicator {
+	vertical-align:middle;
+	margin-right:.26316em;
+	display:inline-block;
+	width:20px;
+	height:20px;
+	background-position:center center;
+	background-repeat:no-repeat;
+	background-image:url("../images/bullet-icon.svg")
+}
+.form-hint-list-item--valid {
+	color:#00823B
+}
+.form-hint-list-item--valid .form-hint-list-item__indicator {
+	background-image:url("/public/images/tick-green.svg")
+}
+    .form-hint-list-item--false {
+	color:#ED1C24
+}
+.form-hint-list-item--false .form-hint-list-item__indicator {
+	background-image:url("/public/images/cross-red.svg")
+}
+.form-hint-list-item__primary {
+	display:table-cell
+}
+
 
 </style>
 
 <main id="content" role="main">
 
   <div class="grid-row">
-    <div class="column-two-thirds" style="margin-bottom:100px">
+    <div class="column-two-thirds">
    <!--1B- lives in the UK-->
     <h2 class="heading-large">Which country do you live in?</h2>
 
@@ -71,29 +104,55 @@
 
       <div class="right-col-details">
 
-<div>
-          <h3 class="heading-medium">You get free:</h3>
-        </div>
+          <h3 class="heading-medium">What you get free </h3>
 
-        <div>
-          <h3 class="heading-small">Prescriptions</h3>
-        </div>
+<ul class="form-hint-list">
+    <li class="form-hint-list-item  form-hint-list-item--valid">
+        <span class="form-hint-list-item__primary">
+            <span class="form-hint-list-item__indicator"></span>
+        </span>
+        Prescriptions
+    </li>
+    <li class="form-hint-list-item form-hint-list-item--valid" >
+        <span class="form-hint-list-item__primary">
+            <span class="form-hint-list-item__indicator"></span>
+        </span>
+        NHS dental exam
+    </li>
 
-        <div>
-          <h3 class="heading-small">Sight tests</h3>
-        </div>
+    <li class="form-hint-list-item form-hint-list-item--false">
+        <span class="form-hint-list-item__primary">
+            <span class="form-hint-list-item__indicator"></span>
+        </span>
+         NHS dental treatment
+    </li>
+    <li class="form-hint-list-item form-hint-list-item--false">
+        <span class="form-hint-list-item__primary">
+            <span class="form-hint-list-item__indicator"></span>
+        </span>
+         Sight test
+    </li>
+        <li class="form-hint-list-item form-hint-list-item--false">
+        <span class="form-hint-list-item__primary">
+            <span class="form-hint-list-item__indicator"></span>
+        </span>
+        Glasses or contact lenses
+    </li>
+            <li class="form-hint-list-item form-hint-list-item--false">
+        <span class="form-hint-list-item__primary">
+            <span class="form-hint-list-item__indicator"></span>
+        </span>
+        NHS wigs
+    </li>
+    <li class="form-hint-list-item form-hint-list-item--false">
+        <span class="form-hint-list-item__primary">
+            <span class="form-hint-list-item__indicator"></span>
+        </span>
+        Travel for treatment
+    </li>
+</ul>
 
-        <div>
-          <h3 class="heading-small">Glasses or contact lenses</h3>
-        </div>
 
-        <div>
-          <h3 class="heading-small">NHS dental exam</h3>
-        </div>
-
-        <div>
-          <h3 class="heading-small">NHS dental treatment</h3>
-        </div>
 
       </div>
 
