--- a/app/views/lis/7/wizard/start.html
+++ b/app/views/lis/7/wizard/start.html
@@ -15,7 +15,8 @@
         </div>
         <br>
         <p>There are lots of different types of help with health costs, depending on your circumstances.</p>
-         <p>Use this checker to see what help is available and how to apply. It takes about 5 minutes to use.</p>
+          <p>Use this checker to see what help is available and how to apply.</p>
+          <p>It takes about 5 minutes to use.</p>
 
 
 <div class="panel panel-border-wide claim-ref">
