--- a/app/views/lis/7/exemption/send-mail.html
+++ b/app/views/lis/7/exemption/send-mail.html
@@ -49,7 +49,7 @@
     {{
       form_macros.button({
         label: 'Send',
-        href: 'email-confirm' 
+        href: 'mail-confirm' 
       })
     }}
     
