--- a/app/views/lis/7/you/new-mail.html
+++ b/app/views/lis/7/you/new-mail.html
@@ -15,7 +15,7 @@
     What is your email address?
   </h1>
       
-  <form action="email-address-handler" method="get" class="form">
+  <form action="mail-handler" method="get" class="form">
     
     <div class="form-item-wrapper">
       <fieldset>
