--- a/app/views/lis/7/exemption/hc2-entitlement.html
+++ b/app/views/lis/7/exemption/hc2-entitlement.html
@@ -84,7 +84,7 @@
           <ul>
             <li><a href="javascript:window.print();">Print this</a></li>
             <li><a href="/public/images/hc2.pdf" target="_blank">Download this (PDF 98k)</a></li>
-            <li><a href="email-me?helplevel=2">Get this sent by email</a></li>
+            <li><a href="send-mail?helplevel=2">Get this sent by email</a></li>
             <li><a href="post?helplevel=2">I need help getting a copy</a></li>
           </ul>
         </div>
