--- a/app/views/lis/7/exemption/hc3-entitlement-hv1.html
+++ b/app/views/lis/7/exemption/hc3-entitlement-hv1.html
@@ -91,7 +91,7 @@
           <ul>
             <li><a href="javascript:window.print();">Print this</a></li>
             <li><a href="/public/images/hc3.pdf" target="_blank">Download this (PDF 98k)</a></li>
-            <li><a href="email-me?helplevel=3">Get this sent by email</a></li>
+            <li><a href="send-mail?helplevel=3">Get this sent by email</a></li>
             <li><a href="post?helplevel=3">I need help getting a copy</a></li>
           </ul>
         </div>
