--- a/app/views/lis/7/live/others/amount.html
+++ b/app/views/lis/7/live/others/amount.html
@@ -15,7 +15,7 @@
   <h1 class="heading-large">
    About their pay
   </h1>
-      <p>You do not have to tell us about the person's pay, but if they don't have much money coming in you might get more help.</p>
+      <p>You do not have to tell us about the person's pay, but if they do not have much money coming in you might get more help.</p>
   
   <h2 class="heading-medium">How often do they get paid?</h2>
   
