--- a/app/views/lis/7/live/rent.html
+++ b/app/views/lis/7/live/rent.html
@@ -16,7 +16,7 @@
 
   <h1 class="heading-large">
     Do you pay rent?
-    <span class="form-hint">Don't include money you pay to parents, relatives or friends.<br>Answer yes if you get help with your rent but still pay something towards it.</span>
+    <span class="form-hint">Do not include money you pay to parents, relatives or friends.<br>Answer yes if you get help with your rent but still pay something towards it.</span>
   </h1>
   <form action="" method="get" class="form">
 
