--- a/app/views/lis/7/partner/summary.html
+++ b/app/views/lis/7/partner/summary.html
@@ -84,7 +84,7 @@
         <p><strong>Priya's benefits</strong></p>
         <tr>
         <td>Benefits your partner recieves</td>
-        <td>They don't receive <br>any of these</td>
+        <td>They do not receive <br>any of these</td>
         <td><a href="pension/private-pension-amount">Change this</a></td>
       </tr>
       <tr>
