--- a/app/views/lis/7/sc/summary.html
+++ b/app/views/lis/7/sc/summary.html
@@ -19,7 +19,7 @@
 
     <table class="data-table you-summary">
       <td>Do you or your partner receive any of the following?</td>
-        <td>I don't receive any <br>of these</td>
+        <td>I do not receive any <br>of these</td>
         <td><a href="../ko">Change this</a></td>
       <tr>
         <td>Are you living permanently in a care home?</td>
