--- a/app/views/lis/7/start-v1.html
+++ b/app/views/lis/7/start-v1.html
@@ -83,7 +83,7 @@
             <li>£23,250 in savings, investments and properties <br><p class="form-hint">(if you permanently live in a care home)</p></li>
         </ul>
     
-     <p>You're already entitled to help (and don't need to complete this application) if you recieve:</p>
+     <p>You're already entitled to help (and do not need to complete this application) if you recieve:</p>
             
         <ul class="list list-bullet">
           <li style="margin-bottom: 3px">income support</li>
