--- a/app/views/lis/7/start-v3.html
+++ b/app/views/lis/7/start-v3.html
@@ -47,7 +47,7 @@
           
         
         <div class="panel panel-border-wide" style="margin-top:30px">
-        <h3 class="heading-small">You are already eligible for help and don't need to complete this application if you are receiving:</h3>
+        <h3 class="heading-small">You are already eligible for help and do not need to complete this application if you are receiving:</h3>
             
         <ul class="list list-bullet">
           <li>income support</li>
