--- a/app/views/lis/7/start.html
+++ b/app/views/lis/7/start.html
@@ -32,7 +32,7 @@
           <li>£23,250 in savings, investments or properties if you permanently live in a care home</li>
         </ul>
         
-        <p>You can apply at any time. Don't wait until you need treatment.</p>
+        <p>You can apply at any time. Do not wait until you need treatment.</p>
 
         <hr>
         <p>
