--- a/app/views/lis/7/to_do_list/index.html
+++ b/app/views/lis/7/to_do_list/index.html
@@ -79,7 +79,7 @@
               Check criminal history
             </h2>
 
-            <p class="instruction-list-item-extra-information">You can't have a criminal history if you want to apply to be a childminder:
+            <p class="instruction-list-item-extra-information">You can not have a criminal history if you want to apply to be a childminder:
             </p>
 
             <ul class="instruction-list-item-extra-information">
