--- a/app/views/lis/7/live/others/benefits.html
+++ b/app/views/lis/7/live/others/benefits.html
@@ -78,7 +78,7 @@
           <div class="form-group">
             <input type="checkbox" id="none" name="bgroup">
             <label class="form-control-checkbox" for="none">
-              They don't receive any of these
+              They do not receive any of these
             </label>
           </div>
           {{
