--- a/app/views/lis/7/live/others/boarder.html
+++ b/app/views/lis/7/live/others/boarder.html
@@ -14,7 +14,7 @@
 
       <h1 class="heading-large">
         Are they a boarder or lodger?
-        <span class="form-hint">Don't count them as a boarder or lodger if they live with you as part of your family.</span>
+        <span class="form-hint">Do not count them as a boarder or lodger if they live with you as part of your family.</span>
       </h1>
   
       <form action="boarder-handler" method="get" class="form">
