--- a/app/views/lis/7/partner/benefits/benefit-sprint3.html
+++ b/app/views/lis/7/partner/benefits/benefit-sprint3.html
@@ -71,7 +71,7 @@
       <div class="form-group">
         <input type="checkbox" id="none" value="none" name="sprint3benefits">
         <label class="form-control-checkbox" for="none">
-          They don't receive any of these
+          They do not receive any of these
         </label>
       </div>
     </div>
