--- a/app/views/lis/7/save-continue/2step.html
+++ b/app/views/lis/7/save-continue/2step.html
@@ -26,7 +26,7 @@
       })
     }}
     
-    <p class="navigation"><a class="cancel" href="../lis-home">I can't do this right now</a></p>
+    <p class="navigation"><a class="cancel" href="../lis-home">I can not do this right now</a></p>
     
   </form>
     </div>
