--- a/app/views/lis/7/save-continue/phone.html
+++ b/app/views/lis/7/save-continue/phone.html
@@ -39,7 +39,7 @@
 
     </form>
     
-    <p class="navigation"><a class="cancel" href="../lis-home">I don't have access to a telephone</a></p>
+    <p class="navigation"><a class="cancel" href="../lis-home">I do not have access to a telephone</a></p>
 
     </div>
     </div>
