--- a/app/views/lis/7/signin.html
+++ b/app/views/lis/7/signin.html
@@ -41,7 +41,7 @@
     
     <h2 class="heading-medium">Problems signing in</h2>
     <ul>
-      <li class="navigation"><a class="cancel" href="">I don't have an account</a></li>
+      <li class="navigation"><a class="cancel" href="">I do not have an account</a></li>
       <li class="navigation"><a class="cancel" href="">Forgotten reference number</a></li>
       <li class="navigation"><a class="cancel" href="">Forgotten memorable word</a></li>
       <li class="navigation"><a class="cancel" href="">Forgotten reference number and memorable word</a></li>
