--- a/app/views/lis/7/start-v2.html
+++ b/app/views/lis/7/start-v2.html
@@ -50,7 +50,7 @@
           
           <hr>
         
-        <h3 class="heading-small">You're already entitled to help (and don't need to complete this application) if you recieve:</h3>
+        <h3 class="heading-small">You're already entitled to help (and do not need to complete this application) if you recieve:</h3>
             
         <ul class="list list-bullet">
           <li>income support</li>
