--- a/app/views/lis/7/start-v4.html
+++ b/app/views/lis/7/start-v4.html
@@ -34,7 +34,7 @@
             <li>£23,250 in savings, investments and properties <br><p class="form-hint">(if you permanently live in a care home)</p></li>
         </ul>
               
-        <h3 class="heading-small">You are already eligible for help and don't need to complete this application if you are receiving:</h3>
+        <h3 class="heading-small">You are already eligible for help and do not need to complete this application if you are receiving:</h3>
             
         <ul class="list list-bullet">
           <li>income support</li>
