--- a/app/views/lis/7/wizard/full-exemption-under-16.html
+++ b/app/views/lis/7/wizard/full-exemption-under-16.html
@@ -17,7 +17,7 @@
         <h1 class="heading-large">You are already exempt</h1>
 
         <p class="intro-to-list">
-          You don't need to apply for this scheme as you are already exempt with:
+          You do not need to apply for this scheme as you are already exempt with:
         </p>
 
         <ul class="list list-bullet">
