updated content on the home page and about memorable words

--- a/app/views/lis/7/assets/money.html
+++ b/app/views/lis/7/assets/money.html
@@ -65,7 +65,7 @@
       <div class="form-group">
         <input type="checkbox" id="none" value="none" name="banktype">
         <label class="form-control-checkbox" for="none">
-          I don't have any of these
+          I do not have any of these
         </label>
       </div>
 
