--- a/app/views/lis/7/home-updated.html
+++ b/app/views/lis/7/home-updated.html
@@ -1,8 +1,6 @@
   {% extends 'templates/nhs_transaction_layout.html' %}
 
-{% block afterHeader %}
-  {% include "includes/service-headers/low-income.html" %}
-{% endblock %}
+
 
 {% block content %}
 
@@ -14,7 +12,8 @@
 
       <div class="text">
         
-        <h1 class="heading-large">Complete the following sections</h1>
+        <h1 class="heading-large">Apply for help with health costs<br>The Low Income Scheme</h1>
+        
         <br>
         
         <table class="data-table">
