--- a/app/views/lis/7/need-to-know.html
+++ b/app/views/lis/7/need-to-know.html
@@ -13,14 +13,14 @@
     <div class="column-two-thirds">
 
   <h1 class="heading-large">
-    You will need the following details to apply
+    Information you will need to apply
   </h1>
       
   <ul class="list list-bullet">
     <li>income from work, pensions or benefits that you or your partner receive</li>
-    <li>mortgages, rent or council tax you pay</li>
-    <li>bank or savings accounts you have</li>
-    <li>other people who live in your household, including their income</li>
+    <li>mortgage, rent or council tax</li>
+    <li>bank and savings accounts</li>
+    <li>other people who live with you, including their income</li>
   </ul>
       
   <form action="" method="get" class="form">
