--- a/app/views/lis/7/partner/summary-no.html
+++ b/app/views/lis/7/partner/summary-no.html
@@ -16,7 +16,7 @@
   
 
     <h1 class="heading-large">
-      Check your details
+      Check your answers
     </h1>
 
     <table class="data-table">
