--- a/app/views/lis/7/you/about-you-summary.html
+++ b/app/views/lis/7/you/about-you-summary.html
@@ -15,7 +15,7 @@
   <div class="text">
 
     <h1 class="heading-large">
-      Check your details
+      Check your answers
     </h1>
     <p><strong>Personal details</strong></p>
     <table class="data-table you-summary">
