--- a/app/views/lis/7/assets/assets-summary.html
+++ b/app/views/lis/7/assets/assets-summary.html
@@ -15,7 +15,7 @@
   <div class="text">
 
     <h1 class="heading-large">
-      Check your details
+      Check your answers
     </h1>
 
     <table class="data-table assets-summary">
