--- a/app/views/lis/7/partner/partner-summary.html
+++ b/app/views/lis/7/partner/partner-summary.html
@@ -16,7 +16,7 @@
       <div class="text">
 
         <h1 class="heading-large">
-          Check your details
+          Check your answers
         </h1>
 
         <table class="data-table you-summary">
