--- a/app/views/lis/7/save-continue/mem-word.html
+++ b/app/views/lis/7/save-continue/mem-word.html
@@ -14,17 +14,17 @@
     <div class="column-two-thirds">
 
       <h1 class="heading-large">
-        Save your information
+        Create a memorable word
       </h1>
       
-      <p>You can save your application and return to it at any time. You will need your application number from the <a href="ref">previous page</a> and a memorable word.</p>
+      <p>You will need your application number (1Q3 4T6 7K9) and a memorable word if you save your application and come back to it later.</p>
       
       <form action="" method="get" class="form">
         <div class="form-item-wrapper">
           <fieldset>
             <div class="form-group">
               <label class="form-label-bold" for="email-address">
-                Create a memorable word
+                Memorable word
               </label>
               <input type="text" id="email-address" class="form-control">
             </div>
@@ -34,7 +34,7 @@
         {{
           form_macros.button({
             label: 'Next',
-            href: 'phone'
+            href: 'phone-pre'
           })
         }}
         
