--- a/app/views/lis/7/sc/summary.html
+++ b/app/views/lis/7/sc/summary.html
@@ -14,7 +14,7 @@
 
   <div class="text">
     <h1 class="heading-large">
-      Check your details
+      Check your answers
     </h1>
 
     <table class="data-table you-summary">
