added lis wizard

--- a/app/views/lis/7/wizard/country.html
+++ b/app/views/lis/7/wizard/country.html
@@ -28,25 +28,25 @@
 
     <div class="form-item-wrapper">
       <div class="form-group">
-        <input type="radio" id="england" name="eligibility">
+        <input type="radio" id="england" name="country" value="england">
         <label class="form-control-radio" for="england">
           England
         </label>
       </div>
       <div class="form-group">
-        <input type="radio" id="Scotland" name="eligibility">
+        <input type="radio" id="Scotland" name="country" value="scotland">
         <label class="form-control-radio" for="Scotland">
           Scotland
         </label>
       </div>
       <div class="form-group">
-        <input type="radio" id="wales" name="eligibility">
+        <input type="radio" id="wales" name="country" value="wales">
         <label class="form-control-radio" for="wales">
           Wales
         </label>
       </div>
       <div class="form-group">
-        <input type="radio" id="northern-ireland" name="eligibility">
+        <input type="radio" id="northern-ireland" name="country" value="northern-ireland">
         <label class="form-control-radio" for="northern-ireland">
           Northern Ireland
         </label>
