--- a/app/views/lis/7/wizard/date-of-birth.html
+++ b/app/views/lis/7/wizard/date-of-birth.html
@@ -15,6 +15,13 @@
 
        <!--2- What's your DOB?-->
 
+<!--
+        <h1>Country is {{country}}</h1>
+        {% if country=="wales" %}
+        <p>wales only</p>
+        {% endif %}
+-->
+
     <h2 class="heading-large">What is your date of birth?</h2>
 
       <form action="eligibility-handler" method="get" class="form">
