created version 8 and reduced routes

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -14,10 +14,10 @@
       <ul>
         <li class="heading-medium">Current sprint - 8</li>
         <li>Created September 2016</li>
-        <li><a href="/sprint7">View</a></li>
+        <li><a href="/sprint8">View</a></li>
       </ul>
       <ul>
-        <li class="heading-medium">Current sprint - </li>
+        <li class="heading-medium"> Sprint 7</li>
         <li>Created August 2016</li>
         <li><a href="/sprint7">View</a></li>
       </ul>
