updated the content in the pre application questions

--- a/app/views/lis/8/care-home.html
+++ b/app/views/lis/8/care-home.html
@@ -13,7 +13,7 @@
     <div class="column-two-thirds">
 
   <h1 class="heading-large">
-    Are you living permanently in a care home?
+    Do {{partnerortext}} live permanently in a care home?
   </h1>
   
   <form action="carehome-handler" method="get" class="form">
