--- a/app/views/lis/8/need-to-know.html
+++ b/app/views/lis/8/need-to-know.html
@@ -16,8 +16,10 @@
     Information you will need to apply
   </h1>
       
+  <p>You will need information about {{partnerstext}}:</p>
+      
   <ul class="list list-bullet">
-    <li>income from work, pensions or benefits that you or your partner receive</li>
+    <li>income from work, pensions or benefits</li>
     <li>mortgage, rent or council tax</li>
     <li>bank and savings accounts</li>
     <li>other people who live with you, including their income</li>
