--- a/app/views/lis/8/start.html
+++ b/app/views/lis/8/start.html
@@ -47,7 +47,7 @@
         <p>You can apply at any time. Do not wait until you need treatment.</p>
 
         <p>
-          <a class="button button-get-started" href="ko" id="next">Start a new application</a>
+          <a class="button button-get-started" href="partner" id="next">Start a new application</a>
         </p>
         
         <a href="signin-continue">I've used this service before - view my application</a>
