--- a/app/assets/sass/nhs_application.scss
+++ b/app/assets/sass/nhs_application.scss
@@ -867,10 +867,14 @@ tr.clickable-row { cursor: pointer; }
     text-decoration: underline;
 }
 
-
 .phase-banner-alpha {
   @extend %site-width-container;
   @extend %contain-floats;
   padding: 10px 0 8px;
   border-bottom: 1px solid #bfc1c3;
+}
+
+
+.bold {
+  font-weight: bold;
 }
