--- a/app/views/lis/8/exempt-kickout.html
+++ b/app/views/lis/8/exempt-kickout.html
@@ -14,21 +14,20 @@
 
       <div class="text">
         
-        <h1 class="heading-xlarge">You are already exempt</h1>
+        <h1 class="heading-xlarge">You do not need to apply to get help</h1>
         
-        <p class="intro-to-list">
-          You do not need to apply for this scheme as you are already exempt with:
+        <p>
+         You can claim health costs because [you get] [you or your partner gets] one of these benefits:
         </p>
 
         <ul class="list list-bullet">
           <li>income support</li>
-          <li>pension credit guarantee credit</li>
-          <li>universal credit</li> 
-          <li>named on, or entitled to, an NHS Tax Credit Exemption certificate</li>
+          <li>Pension Credit Guarantee Credit</li>
+          <li>Universal cCedit</li> 
         </ul>
         
         <p>
-          <a class="button" href="/" id="next">Exit this service</a>
+          <a class="button" href="/" id="next">What you need to do to get help</a>
         </p>
 
       </div>
