--- a/app/views/lis/8/partner.html
+++ b/app/views/lis/8/partner.html
@@ -1,4 +1,4 @@
- {% extends 'templates/nhs_transaction_layout.html' %}
+{% extends 'templates/nhs_transaction_layout.html' %}
 {% import 'includes/form_macros.html' as form_macros %}
 
 {% block afterHeader %}
@@ -13,21 +13,23 @@
     <div class="column-two-thirds">
 
   <h1 class="heading-large">
-    Do {{partnerortext}} get Pension Credit Guarantee Credit?
-  </h1>  
-       <p>This is a top up payment up to £155.60 (for single people) or £237.55 (for couples).</p>
-  <form action="guacredit-handler" method="get" class="form">
+    Do you live with a partner?
+  </h1>
+  
+  <p>You may be married or in a civil partnership but may not be.</p>
+
+  <form action="p2-handler" method="get" class="form">
       <div class="form-item-wrapper">
         <fieldset>
           <div class="inline-form-groups">
             <div class="form-group">
-              <input type="radio" id="yes" name="guacredit" value="yes">
+              <input type="radio" id="yes" name="partner" value="yes">
               <label class="form-control-radio" for="yes">
                 Yes
               </label>
             </div>
             <div class="form-group">
-              <input type="radio" id="no" name="guacredit" value="no">
+              <input type="radio" id="no" name="partner" value="no">
               <label class="form-control-radio" for="no">
                 No
               </label>
@@ -35,14 +37,14 @@
           </div>
         </fieldset>
       </div>
-    
+      <div class="form-item-wrapper">
     {{
       form_macros.button({
         label: 'Next'
       })
     }}
-
-  </form>
+    </div>
+      </form>
     </div>
     </div>
 </main>
