--- a/app/views/lis/8/sc/saving-ch.html
+++ b/app/views/lis/8/sc/saving-ch.html
@@ -13,21 +13,23 @@
     <div class="column-two-thirds">
 
   <h1 class="heading-large">
-    Do {{partnerortext}} get Pension Credit Guarantee Credit?
-  </h1>  
-       <p>This is a top up payment up to £155.60 (for single people) or £237.55 (for couples).</p>
-  <form action="guacredit-handler" method="get" class="form">
+    Do {{partnerortext}} have less than £23,250 in savings, investments and properties?
+  </h1>
+      
+  <p>Property does not include where you live.</p>  
+
+      <form action="carehome-savings-handler" method="get" class="form">
       <div class="form-item-wrapper">
         <fieldset>
           <div class="inline-form-groups">
             <div class="form-group">
-              <input type="radio" id="yes" name="guacredit" value="yes">
+              <input type="radio" id="yes" name="savings" value="yes">
               <label class="form-control-radio" for="yes">
                 Yes
               </label>
             </div>
             <div class="form-group">
-              <input type="radio" id="no" name="guacredit" value="no">
+              <input type="radio" id="no" name="savings" value="no">
               <label class="form-control-radio" for="no">
                 No
               </label>
