--- a/app/views/lis/8/tax-credits.html
+++ b/app/views/lis/8/tax-credits.html
@@ -13,35 +13,21 @@
     <div class="column-two-thirds">
 
   <h1 class="heading-large">
-    Do you or your partner have more than £23,250?
+    Do {{partnerortext}} have a NHS Tax Credits Exemption Certificate? 
   </h1>
-  <p>Include savings, investments &amp; properties (but not place where you live)</p>  
-      <details>
 
-  <summary><span class="summary">What we mean by partner</span></summary>
-
-  <div class="panel panel-border-narrow">
-
-    <p>
-      We use the term partner to mean a person you live with as part of a couple of the same or opposite sex, whether or not you are married or in a civil partnership.
-    </p>
-
-  </div>
-
-</details>
-      <br>
-  <form action="carehome-savings-handler" method="get" class="form">
+      <form action="tce-handler" method="get" class="form">
       <div class="form-item-wrapper">
         <fieldset>
           <div class="inline-form-groups">
             <div class="form-group">
-              <input type="radio" id="yes" name="savings" value="yes">
+              <input type="radio" id="yes" name="taxcredits" value="yes">
               <label class="form-control-radio" for="yes">
                 Yes
               </label>
             </div>
             <div class="form-group">
-              <input type="radio" id="no" name="savings" value="no">
+              <input type="radio" id="no" name="taxcredits" value="no">
               <label class="form-control-radio" for="no">
                 No
               </label>
