--- a/app/views/lis/8/tce-kickout.html
+++ b/app/views/lis/8/tce-kickout.html
@@ -14,12 +14,14 @@
 
       <div class="text">
         
-        <h1 class="heading-xlarge">You cannot apply to get help with health costs</h1>
+        <h1 class="heading-xlarge">You do not need to apply to get help</h1>
         
-        <p>Because [you] [you, your partner, or you both] have more than £23,250 in savings, investments and properties, you cannot get help.</p>
-    
         <p>
-          <a href="/">Link to some help</a>
+         You can claim health costs because [you have] [you or your partner has] an NHS Tax Credit Exemption Certificate.
+        </p>
+        
+        <p>
+          <a class="button" href="/" id="next">What you need to do to get help</a>
         </p>
 
       </div>
